# ESP32_MicroPython1

./: readme.txt
esp32/: ble_led1.py  ble_led2.py  blink1.py  servo1_1.py  servo1_2.py  servo5_1.py  touch1.py  vl53l0x_tof1.py
ws1/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ws1/install/interface_pkg1/share/interface_pkg1/: package.sh
ws1/install/msg_pkg1/share/msg_pkg1/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ws1/install/pubsub_pkg1/lib/pubsub_pkg1/: act_thread_srvr1  act_thread_srvr2  act_thread_srvr3  action_mthread1  action_srvr1  action_srvr2  pub_node1  sub_node1  turtle_msg1  turtle_msg2  turtle_msg3  turtle_pub1  turtle_srvr1  turtle_srvr2  turtle_srvr3
ws1/install/pubsub_pkg1/share/pubsub_pkg1/: package.bash  package.dsv  package.ps1  package.sh  (+2 more)
ws1/log/: latest_build
ws1/src/install/: local_setup.sh  setup.sh
ws1/src/interface_pkg1/: CMakeLists.txt
ws1/src/log/: latest_build
ws1/src/msg_pkg1/: CMakeLists.txt
ws1/src/pubsub_pkg1/: setup.cfg  setup.py
ws1/src/pubsub_pkg1/params/: turtlesim.yaml
ws1/src/pubsub_pkg1/pubsub_pkg1/: act_thread_srvr3.py  action_mthread1.py  jupyter_radian.ipynb  pub_node1.py  sub_node1.py  turtle_msg1.py
ws1/src/py_pkg1/: setup.py
ws1/src/py_pkg2/: package.xml  setup.cfg  setup.py
ws1/src/pypara_pkg1/: package.xml  setup.cfg  setup.py
ws2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ws2/log/: latest_build
ws2/src/action_interface_pkg1/: CMakeLists.txt  package.xml
ws2/src/interface_pkg1/: CMakeLists.txt  package.xml
ws2/src/py_pkg1/: setup.cfg
ws2/src/py_pkg1/py_pkg1/: pub_node1.py  sub_node1.py
ws3/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ws3/log/: latest_build
ws3/src/ardu_pkg1/: package.xml  setup.cfg  setup.py
ws3/src/ardu_pkg1/ardu_pkg1/: arm1_pub1.py
ws3/src/ardu_pkg1/urdf/: robot_arm1_test.urdf.xacro  test1_2dof.urdf.xacro
ws4/: frames_2025-05-17_15.13.02.gv  frames_2025-05-17_17.19.57.gv
ws4/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ws4/log/: latest_build
(+150 files in other folders)
