<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>interface_pkg1</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="hawx@todo.todo">hawx</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>  <!-- 메시지/서비스 생성 도구 추가 -->

  <depend>geometry_msgs</depend>  <!-- Sphere.msg에서 사용하는 geometry_msgs 패키지 의존성 추가 -->

  <exec_depend>rosidl_default_runtime</exec_depend>  <!-- 런타임에서 메시지 사용을 위한 의존성 추가 -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <member_of_group>rosidl_interface_packages</member_of_group>  <!-- 인터페이스 패키지로 그룹 지정 -->
  </export>
</package>
